Change password + minor changes

--- a/CAD-API/Web.config
+++ b/CAD-API/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
     <add name="CADEntities" connectionString="metadata=res://*/CADModel.csdl|res://*/CADModel.ssdl|res://*/CADModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Sandra-PC\SQLEXPRESS;initial catalog=CAD;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -87,4 +88,18 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
+  <log4net debug="true">
+    <appender name="MyFileAppender" type="log4net.Appender.FileAppender">
+      <file value="application.log" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="MyFileAppender" />
+    </root>
+  </log4net>
 </configuration>
