--- a/CAD-API/packages.config
+++ b/CAD-API/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Es.Logging" version="0.0.4" targetFramework="net45" />
   <package id="Es.Logging.Log4" version="0.0.4" targetFramework="net45" />
@@ -23,5 +24,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Unity" version="2.1.505.2" targetFramework="net45" />
+  <package id="Unity.Mvc3" version="1.2" targetFramework="net45" />
+  <package id="Unity.WebAPI" version="0.10" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
