--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -41,6 +41,10 @@
   <ItemGroup>
     <Compile Include="AccountModel.cs" />
     <Compile Include="AddressModel.cs" />
+    <Compile Include="AvailablePlacesModel.cs" />
+    <Compile Include="BusinessUnitProfileDataModel.cs" />
+    <Compile Include="Helper\Enums.cs" />
+    <Compile Include="PromotionModel.cs" />
     <Compile Include="BusinessUnitRegistrationModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TokenModel.cs" />
